--- a/web/src/app/shared/components/data-table/data-table.component.scss
+++ b/web/src/app/shared/components/data-table/data-table.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles';
+@import "~bootstrap/dist/css/bootstrap.css";
 .portlet-body {
     padding-bottom: 0px!important;
     width: 100%;
