--- a/web/src/app/shared/components/loading/loading.component.html
+++ b/web/src/app/shared/components/loading/loading.component.html
@@ -1,5 +1,8 @@
-<div *ngIf="loading" class="row">
-  <div class="col-12">
-    <div class="loader"></div>
-  </div>
-</div>
+<!-- <div class="loading">
+    <div class="modal" [id]="'loading'" role="dialog">
+        <div class="modal-fade">
+            <img class="image" src="../../../../assets/images/loading.gif" />
+        </div>
+    </div>
+</div> -->
+abc
