--- a/web/src/app/shared/components/core/header/header.component.html
+++ b/web/src/app/shared/components/core/header/header.component.html
@@ -1,22 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#"><img src="../../../../../assets/images/logo2.PNG" alt=""> </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
   <div class="right-header collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav header-title">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-futbol"></i>&nbsp;TÌM KIẾM
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Tìm trận đấu</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Tìm sân bóng</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Tìm giải đấu đấu</a>
+          <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Tìm trận đấu</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Tìm sân bóng</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Tìm giải đấu đấu</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -33,12 +34,23 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fas fa-futbol"></i>&nbsp;TẠO GIẢI ĐẤU<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#"><i class="fas fa-futbol"></i>&nbsp;TẠO GIẢI ĐẤU<span
+            class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item" (click)="login()">
-        <a class="nav-link" href=""><i class="fas fa-user"></i>&nbsp;ĐĂNG NHẬP</a>
+      <li *ngIf="!isShow" class="nav-item cursor-li">
+        <a class="nav-link" (click)="login()"><i class="fas fa-user"></i>&nbsp;ĐĂNG NHẬP</a>
       </li>
-
+      <li *ngIf="isShow" class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-user"></i>&nbsp;TÀI KHOẢN
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="user/profile"><i class="fas fa-user"></i> &nbsp;Thông tin</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item cursor-li" (click)="logout()"><i class="fas fa-user"></i> &nbsp;Đăng xuất</a>
+        </div>
+      </li>
     </ul>
   </div>
 </nav>
