--- a/web/src/app/shared/components/core/header/header.component.scss
+++ b/web/src/app/shared/components/core/header/header.component.scss
@@ -1,3 +1,13 @@
 .right-header {
-    justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cursor-li {
+  cursor: pointer;
+}
+.bg-light {
+  background-color: #73754f59 !important;
+}
+.header-title {
+    font-size: 20px;
+    font-weight: bold;
 }
