--- a/web/src/app/shared/components/loading/loading.component.html
+++ b/web/src/app/shared/components/loading/loading.component.html
@@ -1,8 +1,13 @@
-<!-- <div class="loading">
+<!-- <div class="overlay">
     <div class="modal" [id]="'loading'" role="dialog">
         <div class="modal-fade">
             <img class="image" src="../../../../assets/images/loading.gif" />
         </div>
     </div>
 </div> -->
-abc
+
+<div class="overlay">
+    <div class="content">
+        <img src="../../../../assets/images/loading.gif" alt="">
+    </div>
+</div>
