--- a/web/src/app/shared/components/core/header/header.component.html
+++ b/web/src/app/shared/components/core/header/header.component.html
@@ -31,6 +31,8 @@
           <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Quản lí sân</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Quản lí giải đấu</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="abc/area"><i class="fas fa-futbol"></i> &nbsp;Quản lí khu vực</a>
         </div>
       </li>
       <li class="nav-item">
