web/user finish edit profile and change pass

--- a/web/src/app/user/profile/profile.component.html
+++ b/web/src/app/user/profile/profile.component.html
@@ -27,17 +27,20 @@
           <div class="col-md-12">
             <div class="form-group">
               <label class="control-label">Số điện thoại</label>
-              <div>
+              <span class="required"> *</span>
+              <div class="input-include-error">
                 <input type="tel" class="form-control input-lg" name="phone" formControlName="phone" value="">
+                <span *ngIf="profileForm.controls['phone'].hasError('required') && (profileForm.controls['phone'].touched || errorForm ) " for="phone">Trường bắt buộc</span>
               </div>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <div>
+              <div class="input-include-error">
                 <button type="submit" class="btn btn-success" [disabled]="!profileForm.valid">
                   Cập nhật thông tin
                 </button>
+                <span *ngIf="editFaild">{{messageError}}</span>
               </div>
             </div>
           </div>
@@ -46,36 +49,42 @@
         <form class="col-md-6" role="form" [formGroup]="changePassForm" (ngSubmit)="changePass()">
           <div class="col-md-12">
             <div class="form-group">
-              <label class="control-label">Mật khẩu hiện tại</label>
-              <div>
+              <label class="control-label">Mật khẩu hiện tại </label>
+              <span class="required"> *</span>
+              <div class="input-include-error">
                 <input type="password" class="form-control input-lg" name="currentPassword"
                   formControlName="currentPassword">
+                  <span *ngIf="changePassForm.controls['currentPassword'].hasError('required') && (changePassForm.controls['currentPassword'].touched || errorForm ) " for="currentPassword">Trường bắt buộc</span>
               </div>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
               <label class="control-label">Mật khẩu mới</label>
-              <div>
+              <span class="required"> *</span>
+              <div class="input-include-error">
                 <input type="password" class="form-control input-lg" name="newPassword" formControlName="newPassword">
+                <span *ngIf="changePassForm.controls['newPassword'].hasError('required') && (changePassForm.controls['newPassword'].touched || errorForm ) " for="newPassword">Trường bắt buộc</span>
               </div>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
               <label class="control-label">Xác nhận mật khẩu mới</label>
-              <div>
+              <div class="input-include-error">
                 <input type="password" class="form-control input-lg" name="confirmNewPassword"
                   formControlName="confirmNewPassword">
-              </div>
+                  <span *ngIf="(changePassForm.hasError('passwordMatchValidator') || changePassForm.controls['confirmNewPassword'].hasError('required')) &&(changePassForm.controls['confirmNewPassword'].touched || errorForm )" for="confirmNewPassword">Mạt khẩu không trùng khớp</span>
+                </div>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <div>
+              <div class="input-include-error">
                 <button type="submit" class="btn btn-success" [disabled]="!changePassForm.valid">
                   Thay đổi mật khẩu
-                </button>
+                </button> 
+                <span *ngIf="changePassFaild">{{messageError}}</span>
               </div>
             </div>
           </div>
@@ -84,3 +93,4 @@
     </div>
   </div>
 </div>
+<app-loading></app-loading>
