--- a/web/src/app/shared/components/core/header/header.component.html
+++ b/web/src/app/shared/components/core/header/header.component.html
@@ -20,7 +20,7 @@
           <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Tìm giải đấu đấu</a>
         </div>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown" *ngIf="isAdmin">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-futbol"></i>&nbsp;QUẢN LÍ
@@ -32,7 +32,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Quản lí giải đấu</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="abc/area"><i class="fas fa-futbol"></i> &nbsp;Quản lí khu vực</a>
+          <a class="dropdown-item" href="area"><i class="fas fa-futbol"></i> &nbsp;Quản lí khu vực</a>
         </div>
       </li>
       <li class="nav-item">
@@ -48,7 +48,7 @@
           <i class="fas fa-user"></i>&nbsp;TÀI KHOẢN
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="user/profile"><i class="fas fa-user"></i> &nbsp;Thông tin</a>
+          <a class="dropdown-item" href="profile"><i class="fas fa-user"></i> &nbsp;Thông tin</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item cursor-li" (click)="logout()"><i class="fas fa-user"></i> &nbsp;Đăng xuất</a>
         </div>
