--- a/web/src/app/page-error/page-error.component.scss
+++ b/web/src/app/page-error/page-error.component.scss
@@ -1,8 +1,8 @@
 .err-page {
-  display: block;
-  height: 640px;
+  height: 100vh;
+  width: 100vw;
   background-image: url(../../assets/images/404page.jpg);
 }
 .err-page a {
-    font-size: 30px;
+  font-size: 30px;
 }
