--- a/web/src/app/shared/components/core/header/header.component.html
+++ b/web/src/app/shared/components/core/header/header.component.html
@@ -20,24 +20,33 @@
           <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Tìm giải đấu đấu</a>
         </div>
       </li>
-      <li class="nav-item dropdown" *ngIf="isAdmin">
+      <li class="nav-item">
+        <a class="nav-link" href="#"><i class="fas fa-futbol"></i>&nbsp;TẠO GIẢI ĐẤU<span
+            class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item dropdown" *ngIf="isShow">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-futbol"></i>&nbsp;QUẢN LÍ
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Quản lí đội</a>
+          <a class="dropdown-item" href="abc/team"><i class="fas fa-futbol"></i> &nbsp;Quản lí đội</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Quản lí sân</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Quản lí giải đấu</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="area"><i class="fas fa-futbol"></i> &nbsp;Quản lí khu vực</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fas fa-futbol"></i>&nbsp;TẠO GIẢI ĐẤU<span
-            class="sr-only">(current)</span></a>
+      <li class="nav-item dropdown" *ngIf="isAdmin">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-futbol"></i>&nbsp;ADMIN QUẢN LÍ
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="abc/area"><i class="fas fa-futbol"></i> &nbsp;Khu vực</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="abc/level"><i class="fas fa-futbol"></i> &nbsp;Trình độ</a>
+        </div>
       </li>
       <li *ngIf="!isShow" class="nav-item cursor-li">
         <a class="nav-link" (click)="login()"><i class="fas fa-user"></i>&nbsp;ĐĂNG NHẬP</a>
@@ -48,7 +57,7 @@
           <i class="fas fa-user"></i>&nbsp;TÀI KHOẢN
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="profile"><i class="fas fa-user"></i> &nbsp;Thông tin</a>
+          <a class="dropdown-item" href="abc/profile"><i class="fas fa-user"></i> &nbsp;Thông tin</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item cursor-li" (click)="logout()"><i class="fas fa-user"></i> &nbsp;Đăng xuất</a>
         </div>
