--- a/web/src/app/shared/components/select-dropdown/select-dropdown.component.scss
+++ b/web/src/app/shared/components/select-dropdown/select-dropdown.component.scss
@@ -19,7 +19,7 @@ ol {
 .dropdown-search {
     border: 1px solid lightgray;
     border-radius: 5px;
-    height: 32px;
+    // height: 32px;
 }
 
 .item-value {
@@ -63,7 +63,7 @@ ol {
 
 .nav>li>a {
     display: block;
-    padding: 7px 12px!important;
+    padding: 6px 12px!important;
 }
 
 .search-input,
