team create get list

--- a/web/src/app/shared/components/core/header/header.component.html
+++ b/web/src/app/shared/components/core/header/header.component.html
@@ -30,7 +30,7 @@
           <i class="fas fa-futbol"></i>&nbsp;QUẢN LÍ
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="abc/team"><i class="fas fa-futbol"></i> &nbsp;Quản lí đội</a>
+          <a class="dropdown-item" href="team"><i class="fas fa-futbol"></i> &nbsp;Quản lí đội</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Quản lí sân</a>
           <div class="dropdown-divider"></div>
@@ -43,9 +43,9 @@
           <i class="fas fa-futbol"></i>&nbsp;ADMIN QUẢN LÍ
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="abc/area"><i class="fas fa-futbol"></i> &nbsp;Khu vực</a>
+          <a class="dropdown-item" href="area"><i class="fas fa-futbol"></i> &nbsp;Khu vực</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="abc/level"><i class="fas fa-futbol"></i> &nbsp;Trình độ</a>
+          <a class="dropdown-item" href="level"><i class="fas fa-futbol"></i> &nbsp;Trình độ</a>
         </div>
       </li>
       <li *ngIf="!isShow" class="nav-item cursor-li">
@@ -57,7 +57,7 @@
           <i class="fas fa-user"></i>&nbsp;TÀI KHOẢN
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="abc/profile"><i class="fas fa-user"></i> &nbsp;Thông tin</a>
+          <a class="dropdown-item" href="profile"><i class="fas fa-user"></i> &nbsp;Thông tin</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item cursor-li" (click)="logout()"><i class="fas fa-user"></i> &nbsp;Đăng xuất</a>
         </div>
