--- a/web/src/app/user/team/team-detail/team-detail.component.html
+++ b/web/src/app/user/team/team-detail/team-detail.component.html
@@ -4,7 +4,7 @@
       <h1 class="modal-title">Quản lí đội</h1>
     </div>
     <div class="modal-body">
-      <form role="form" [formGroup]="formAdd" (ngSubmit)="add()">
+      <form role="form" [formGroup]="formDetail" (ngSubmit)="add()">
         <div class="col-md-12 row">
           <div class="col-md-6">
             <div class="form-group">
@@ -12,7 +12,7 @@
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="text" class="form-control input-lg" name="name" formControlName="name">
-                <span *ngIf="formAdd.controls.name.hasError('required')&&(formAdd.controls['name'].touched || errorForm)">Trường bắt buộc</span>
+                <span *ngIf="formDetail.controls.name.hasError('required')&&(formDetail.controls['name'].touched || errorForm)">Trường bắt buộc</span>
               </div>
             </div>
           </div>
@@ -21,10 +21,10 @@
               <label class="control-label">Khu vực</label>
               <span class="required"> *</span>
               <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formAdd.controls['area'].value" [title]="'Khu vực'"
+                <app-select-dropdown [nameSelect]="formDetail.controls['area'].value" [title]="'Khu vực'"
                   [selectedIndex]="selectedIndex" [options]="listArea"
                   (selectedOption)="handleDownSelect($event, 'area')"></app-select-dropdown>
-                <span *ngIf="formAdd.controls.area.hasError('required')&&(formAdd.controls['area'].touched || errorForm)">Trường bắt buộc</span>
+                <span *ngIf="formDetail.controls.area.hasError('required')&&(formDetail.controls['area'].touched || errorForm)">Trường bắt buộc</span>
               </div>
             </div>
           </div>
@@ -33,10 +33,10 @@
               <label class="control-label">Trình độ</label>
               <span class="required"> *</span>
               <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formAdd.controls['level'].value" [title]="'Trình độ'"
+                <app-select-dropdown [nameSelect]="formDetail.controls['level'].value" [title]="'Trình độ'"
                   [selectedIndex]="selectedIndex" [options]="listLevel"
                   (selectedOption)="handleDownSelect($event, 'level')"></app-select-dropdown>
-                <span *ngIf="formAdd.controls.level.hasError('required')&&(formAdd.controls['level'].touched || errorForm)">Trường bắt buộc</span>
+                <span *ngIf="formDetail.controls.level.hasError('required')&&(formDetail.controls['level'].touched || errorForm)">Trường bắt buộc</span>
               </div>
             </div>
           </div>
@@ -56,7 +56,7 @@
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="number" class="form-control input-lg" name="age_min" formControlName="age_min">
-                <span *ngIf="formAdd.controls.age_min.hasError('required')&&(formAdd.controls['age_min'].touched || errorForm)">Trường bắt buộc</span>
+                <span *ngIf="formDetail.controls.age_min.hasError('required')&&(formDetail.controls['age_min'].touched || errorForm)">Trường bắt buộc</span>
               </div>
             </div>
           </div>
@@ -66,7 +66,7 @@
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="number" class="form-control input-lg" name="age_max" formControlName="age_max">
-                <span *ngIf="formAdd.controls.age_max.hasError('required')&&(formAdd.controls['age_max'].touched || errorForm)">Trường bắt buộc</span>
+                <span *ngIf="formDetail.controls.age_max.hasError('required')&&(formDetail.controls['age_max'].touched || errorForm)">Trường bắt buộc</span>
               </div>
             </div>
           </div>
@@ -81,7 +81,7 @@
           </div>
           <div class="col-md-6 btn-center">
             <div class="form-group">
-              <button type="submit" class="btn btn-success" [disabled]="!formAdd.valid">
+              <button type="submit" class="btn btn-success" [disabled]="!formDetail.valid">
                 <i class="fas fa-plus-circle"></i> &nbsp;Tạo đội
               </button>
             </div>
