--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -3,6 +3,9 @@
 body {
   background-image: url("./assets/images/backGround.jpg");
 }
+.view {
+  pointer-events: none;
+}
 .error-message {
   color: red;
   text-transform: capitalize;
