finish quan li nganh nge, tao san, them san con, them bang gia

--- a/web/src/app/shared/components/core/header/header.component.html
+++ b/web/src/app/shared/components/core/header/header.component.html
@@ -32,7 +32,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="team"><i class="fas fa-futbol"></i> &nbsp;Quản lí đội</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Quản lí sân</a>
+          <a class="dropdown-item" href="gridiron"><i class="fas fa-futbol"></i> &nbsp;Quản lí sân</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;Quản lí giải đấu</a>
         </div>
@@ -46,6 +46,8 @@
           <a class="dropdown-item" href="area"><i class="fas fa-futbol"></i> &nbsp;Khu vực</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="level"><i class="fas fa-futbol"></i> &nbsp;Trình độ</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="career"><i class="fas fa-futbol"></i> &nbsp;Ngành nghề</a>
         </div>
       </li>
       <li *ngIf="!isShow" class="nav-item cursor-li">
