--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -12,6 +12,12 @@ body {
   padding: 6px 4px;
   font-size: 15px;
 }
+.btn-center {
+  justify-content: center;
+  display: flex;
+  align-items: flex-end;
+}
+
 .input-include-error span {
   color: red;
   text-transform: capitalize;
